--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="percent" translatable="false">%</string>
     <string name="Ro">Rø</string>
     <string name="Re"><![CDATA[&deg;R]]></string>
-    <string name="N"><![CDATA[&deg;N]]>></string>
+    <string name="N"><![CDATA[&deg;N]]></string>
     <string name="D"><![CDATA[&deg;D]]></string>
     <string name="Ra"><![CDATA[&deg;Ra]]></string>
     <string name="F"><![CDATA[&deg;F]]></string>
