--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,14 +40,56 @@
     <string name="kWh">kWh</string>
     <string name="kJ_kg">kJ/kg</string>
     <string name="kg_m3"><![CDATA[kg/m<sup><small>3</small></sup>]]></string>
-    <string name="Pas"><![CDATA[Pa&times;s]]></string>
+    <string name="Pas"><![CDATA[Pa&sdot;s]]></string>
     <string name="K_1">1/K</string>
     <string name="Pa_1">1/Pa</string>
     <string name="MPa_1">1/MPa</string>
     <string name="m2_s"><![CDATA[m<sup><small>2</small></sup>/s]]></string>
-    <string name="J_kgK"><![CDATA[J/(kg&times;K)]]></string>
+    <string name="J_kgK"><![CDATA[J/(kg&sdot;K)]]></string>
     <string name="m3_kg"><![CDATA[m<sup><small>3</small></sup>/kg]]></string>
     <string name="m_s">m/s</string>
     <string name="N_m">N/m</string>
-    <string name="W_mK"><![CDATA[W/m&times;K]]></string>
+    <string name="W_mK"><![CDATA[W/m&sdot;K]]></string>
+    <string name="SpecificEnthalpy">Specific Enthalpy</string>
+    <string name="h">h</string>
+    <string name="Pressure">Pressure</string>
+    <string name="P">P</string>
+    <string name="VapourFraction">Vapour Fraction</string>
+    <string name="x">x</string>
+    <string name="Density">Density</string>
+    <string name="rho"><![CDATA[&rho;]]></string>
+    <string name="RelativePermittivity">Relative Permittivity</string>
+    <string name="epsilon"><![CDATA[&epsilon;]]></string>
+    <string name="DynamicViscosity">Dynamic Viscosity</string>
+    <string name="nu"><![CDATA[&nu;]]></string>
+    <string name="IsobaricCubicExpansionCoefficient">Isobaric Cubic Expansion Coefficient</string>
+    <string name="av"><![CDATA[&alpha;<sub><small>v</small></sub>]]></string>
+    <string name="IsothermalCompressibility">Isothermal Compressibility</string>
+    <string name="kT"><![CDATA[&kappa;<sub><small>T</small></sub>]]></string>
+    <string name="KinematicViscosity">Kinematic Viscosity</string>
+    <string name="eta"><![CDATA[&eta;]]></string>
+    <string name="PrandtlNumber">Prandtl Number</string>
+    <string name="Pr">Pr</string>
+    <string name="SpecificInternalEnergy">Specific Internal Energy</string>
+    <string name="u">u</string>
+    <string name="SpecificEntropy">Specific Entropy</string>
+    <string name="s">s</string>
+    <string name="SpecificIsobaricHeatCapacity">Specific Isobaric Heat Capacity</string>
+    <string name="cp"><![CDATA[c<sub><small>p</small></sub>]]></string>
+    <string name="cv"><![CDATA[c<sub><small>v</small></sub>]]></string>
+    <string name="SpecificIsochoricHeatCapacity">Specific Isochoric Heat Capacity</string>
+    <string name="SpecificVolume">Specific Volume</string>
+    <string name="v">v</string>
+    <string name="SpeedOfSound">Speed of Sound</string>
+    <string name="w">w</string>
+    <string name="SurfaceTension">Surface Tension</string>
+    <string name="sigma"><![CDATA[&sigma;]]></string>
+    <string name="Temperature">Temperature</string>
+    <string name="T">T</string>
+    <string name="ThermalConductivity">Thermal Conductivity</string>
+    <string name="lambda"><![CDATA[&lambda;]]></string>
+    <string name="ThermalDiffusivity">Thermal Diffusivity</string>
+    <string name="k"><![CDATA[&kappa;]]></string>
+    <string name="SpecificGibbsFreeEnergy">Specific Gibbs Free Energy</string>
+    <string name="g">g</string>
 </resources>
