--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="k"><![CDATA[&kappa;]]></string>
     <string name="SpecificGibbsFreeEnergy">Specific Gibbs Free Energy</string>
     <string name="g">g</string>
+    <string name="settings">Settings</string>
 </resources>
