--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,11 +9,6 @@
     <string name="kg">кг</string>
     <string name="J_kg">Дж/кг</string>
     <string name="J">Дж</string>
-    <string name="entropy">Энтропия</string>
-    <string name="enthalpy">Энтальпия</string>
-    <string name="vapourFraction">Сухость пара</string>
-    <string name="temperature">Температура</string>
-    <string name="pressure">Давление</string>
     <string name="bar">бар</string>
     <string name="at">ат</string>
     <string name="atm">атм</string>
@@ -25,4 +20,41 @@
     <string name="cal15"><![CDATA[кал<sub><small>15</small></sub>]]></string>
     <string name="kWh"><![CDATA[кВт&times;ч]]></string>
     <string name="kJ_kg">кДж/кг</string>
+    <string name="kg_m3"><![CDATA[кг/м<sup><small>3</small></sup>]]></string>
+    <string name="Pas"><![CDATA[Па&sdot;с]]></string>
+    <string name="m2_s"><![CDATA[м<sup><small>2</small></sup>/с]]></string>
+    <string name="MPa_1">1/МПа</string>
+    <string name="Pa_1">1/Па</string>
+    <string name="J_kgK"><![CDATA[Дж/(кг&sdot;K)]]></string>
+    <string name="m3_kg"><![CDATA[м<sup><small>3</small></sup>/кг]]></string>
+    <string name="m_s">м/с</string>
+    <string name="N_m">Н/м</string>
+    <string name="W_mK"><![CDATA[Вт/м&sdot;K]]></string>
+    <string name="SpecificEnthalpy">Удельная Энтальпия</string>
+    <string name="Pressure">Давление</string>
+    <string name="VapourFraction">Сухость Пара</string>
+    <string name="Density">Плотность</string>
+    <string name="RelativePermittivity">Относительная Диэлектрическая Проницаемость</string>
+    <string name="DynamicViscosity">Динамическая Вязкость</string>
+    <string name="IsobaricCubicExpansionCoefficient">Коэффициент Объёмного Теплового Расширения</string>
+    <string name="av"><![CDATA[&beta;]]></string>
+    <string name="IsothermalCompressibility">Изотермическая Сжимаемость</string>
+    <string name="kT"><![CDATA[&beta;<sub><small>T</small></sub>]]></string>
+    <string name="KinematicViscosity">Кинематическая Вязкость</string>
+    <string name="PrandtlNumber">Число Прандтля</string>
+    <string name="SpecificInternalEnergy">Удельная Внутренняя Энергия</string>
+    <string name="SpecificEntropy">Удельная Энтропия</string>
+    <string name="SpecificIsobaricHeatCapacity">Удельная Изобарная Теплоемкость</string>
+    <string name="SpecificIsochoricHeatCapacity">Удельная Изохорная Теплоемкость</string>
+    <string name="SpecificVolume">Удельный Объём</string>
+    <string name="SpeedOfSound">Скорость Звука</string>
+    <string name="SurfaceTension">Поверхностное Натяжение</string>
+    <string name="Temperature">Температура</string>
+    <string name="ThermalConductivity">Теплопроводность</string>
+    <string name="ThermalDiffusivity">Температуропроводность</string>
+    <string name="k">а</string>
+    <string name="SpecificGibbsFreeEnergy">Удельная Энергия Гиббса</string>
+    <string name="settings">Настройки</string>
+    <string name="propertyNamesSummary">Показывать Названия Свойств</string>
+    <string name="propertyNamesTitle">Названия Свойств</string>
 </resources>
