--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,31 +3,24 @@
 
     <string name="kg">kg</string>
     <string name="J">J</string>
-
-
-    <string name="temperature">Temperature</string>
-    <string name="pressure">Pressure</string>
-    <string name="enthalpy">Enthalpy</string>
-    <string name="entropy">Entropy</string>
-    <string name="vapourFraction">Vapour Fraction</string>
     <string name="J_kg">J/kg</string>
     <string name="Pa">Pa</string>
-    <string name="K">K</string>
-    <string name="ratio">_</string>
+    <string name="K" translatable="false">K</string>
+    <string name="ratio" translatable="false">_</string>
     <string name="percent" translatable="false">%</string>
-    <string name="Ro">Rø</string>
-    <string name="Re"><![CDATA[&deg;R]]></string>
-    <string name="N"><![CDATA[&deg;N]]></string>
-    <string name="D"><![CDATA[&deg;D]]></string>
-    <string name="Ra"><![CDATA[&deg;Ra]]></string>
-    <string name="F"><![CDATA[&deg;F]]></string>
-    <string name="C"><![CDATA[&deg;C]]></string>
+    <string name="Ro" translatable="false">Rø</string>
+    <string name="Re" translatable="false"><![CDATA[&deg;R]]></string>
+    <string name="N" translatable="false"><![CDATA[&deg;N]]></string>
+    <string name="D" translatable="false"><![CDATA[&deg;D]]></string>
+    <string name="Ra" translatable="false"><![CDATA[&deg;Ra]]></string>
+    <string name="F" translatable="false"><![CDATA[&deg;F]]></string>
+    <string name="C" translatable="false"><![CDATA[&deg;C]]></string>
     <string name="kPa">kPa</string>
     <string name="MPa">MPa</string>
     <string name="bar">bar</string>
     <string name="at">at</string>
     <string name="atm">atm</string>
-    <string name="psi">psi</string>
+    <string name="psi" translatable="false">psi</string>
     <string name="mmHg">mm Hg</string>
     <string name="mH2O"><![CDATA[m H<sub><small>2</small></sub>O]]></string>
     <string name="kJ">kJ</string>
@@ -36,12 +29,11 @@
     <string name="cal">cal</string>
     <string name="calth"><![CDATA[cal<sub><small>th</small></sub>]]></string>
     <string name="cal15"><![CDATA[cal<sub><small>15</small></sub>]]></string>
-    <string name="BTU">BTU</string>
+    <string name="BTU" translatable="false">BTU</string>
     <string name="kWh">kWh</string>
     <string name="kJ_kg">kJ/kg</string>
     <string name="kg_m3"><![CDATA[kg/m<sup><small>3</small></sup>]]></string>
-    <string name="Pas"><![CDATA[Pa&sdot;s]]></string>
-    <string name="K_1">1/K</string>
+    <string name="K_1" translatable="false">1/K</string>
     <string name="Pa_1">1/Pa</string>
     <string name="MPa_1">1/MPa</string>
     <string name="m2_s"><![CDATA[m<sup><small>2</small></sup>/s]]></string>
@@ -51,46 +43,49 @@
     <string name="N_m">N/m</string>
     <string name="W_mK"><![CDATA[W/m&sdot;K]]></string>
     <string name="SpecificEnthalpy">Specific Enthalpy</string>
-    <string name="h">h</string>
+    <string name="h" translatable="false">h</string>
     <string name="Pressure">Pressure</string>
-    <string name="P">P</string>
+    <string name="P" translatable="false">P</string>
     <string name="VapourFraction">Vapour Fraction</string>
-    <string name="x">x</string>
+    <string name="x" translatable="false">x</string>
     <string name="Density">Density</string>
-    <string name="rho"><![CDATA[&rho;]]></string>
+    <string name="rho" translatable="false"><![CDATA[&rho;]]></string>
     <string name="RelativePermittivity">Relative Permittivity</string>
-    <string name="epsilon"><![CDATA[&epsilon;]]></string>
+    <string name="epsilon" translatable="false"><![CDATA[&epsilon;]]></string>
     <string name="DynamicViscosity">Dynamic Viscosity</string>
-    <string name="nu"><![CDATA[&nu;]]></string>
+    <string name="nu" translatable="false"><![CDATA[&nu;]]></string>
     <string name="IsobaricCubicExpansionCoefficient">Isobaric Cubic Expansion Coefficient</string>
     <string name="av"><![CDATA[&alpha;<sub><small>v</small></sub>]]></string>
     <string name="IsothermalCompressibility">Isothermal Compressibility</string>
     <string name="kT"><![CDATA[&kappa;<sub><small>T</small></sub>]]></string>
     <string name="KinematicViscosity">Kinematic Viscosity</string>
-    <string name="eta"><![CDATA[&eta;]]></string>
+    <string name="eta" translatable="false"><![CDATA[&eta;]]></string>
     <string name="PrandtlNumber">Prandtl Number</string>
-    <string name="Pr">Pr</string>
+    <string name="Pr" translatable="false">Pr</string>
     <string name="SpecificInternalEnergy">Specific Internal Energy</string>
-    <string name="u">u</string>
+    <string name="u" translatable="false">u</string>
     <string name="SpecificEntropy">Specific Entropy</string>
-    <string name="s">s</string>
+    <string name="s" translatable="false">s</string>
     <string name="SpecificIsobaricHeatCapacity">Specific Isobaric Heat Capacity</string>
-    <string name="cp"><![CDATA[c<sub><small>p</small></sub>]]></string>
-    <string name="cv"><![CDATA[c<sub><small>v</small></sub>]]></string>
+    <string name="cp" translatable="false"><![CDATA[c<sub><small>p</small></sub>]]></string>
+    <string name="cv" translatable="false"><![CDATA[c<sub><small>v</small></sub>]]></string>
     <string name="SpecificIsochoricHeatCapacity">Specific Isochoric Heat Capacity</string>
     <string name="SpecificVolume">Specific Volume</string>
-    <string name="v">v</string>
+    <string name="v" translatable="false">v</string>
     <string name="SpeedOfSound">Speed of Sound</string>
-    <string name="w">w</string>
+    <string name="w" translatable="false">w</string>
     <string name="SurfaceTension">Surface Tension</string>
-    <string name="sigma"><![CDATA[&sigma;]]></string>
+    <string name="sigma" translatable="false"><![CDATA[&sigma;]]></string>
     <string name="Temperature">Temperature</string>
-    <string name="T">T</string>
+    <string name="T" translatable="false">T</string>
     <string name="ThermalConductivity">Thermal Conductivity</string>
-    <string name="lambda"><![CDATA[&lambda;]]></string>
+    <string name="lambda" translatable="false"><![CDATA[&lambda;]]></string>
     <string name="ThermalDiffusivity">Thermal Diffusivity</string>
     <string name="k"><![CDATA[&kappa;]]></string>
     <string name="SpecificGibbsFreeEnergy">Specific Gibbs Free Energy</string>
-    <string name="g">g</string>
+    <string name="g" translatable="false">g</string>
     <string name="settings">Settings</string>
+    <string name="Pas"><![CDATA[Pa&sdot;s]]></string>
+    <string name="propertyNamesSummary">Show Property Names</string>
+    <string name="propertyNamesTitle">Property Names</string>
 </resources>
