--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
     <string name="k"><![CDATA[&kappa;]]></string>
     <string name="SpecificGibbsFreeEnergy">Specific Gibbs Free Energy</string>
     <string name="g" translatable="false">g</string>
-    <string name="settings">Settings</string>
+    <string name="menu_title_preferences">Settings</string>
     <string name="Pas"><![CDATA[Pa&sdot;s]]></string>
     <string name="preferenceSummaryPropertyNames">Show Property Names</string>
     <string name="preferenceTitlePropertyNames">Property Names</string>
@@ -127,6 +127,14 @@
     <string name="kg_s2"><![CDATA[kg/s<sup><small>2</small></sup>]]></string>
     <string name="lbf_ft" translatable="false">lbf/ft</string>
     <string name="BTU_hrftR" translatable="false"><![CDATA[BTU/(hr&sdot;ft&sdot;R)]]></string>
-    <string name="adAppId">ca-app-pub-2256461421910631~6805693188</string>
+    <string name="adAppId" translatable="false">ca-app-pub-2256461421910631~6805693188</string>
     <string name="adUnitIdBanner" translatable="false">ca-app-pub-2256461421910631/1553366503</string>
+    <string name="menu_title_info_details">Info Details</string>
+    <string name="info_details"><![CDATA[
+    This app uses <a href="http://www.hummeling.com/IF97">Java IAPWS-IF97 Steam Tables</a> library
+    with open <a href="https://sourceforge.net/projects/if97/">source code</a>.
+]]></string>
+    <string name="contact_developer">Contact Developer: </string>
+    <string name="contact_developer_twitter" translatable="false"><![CDATA[     Twitter: <a href="https://twitter.com/alexej520">@alexej520</a>     ]]></string>
+    <string name="contact_developer_email" translatable="false">E-mail: lextop.games@gmail.com</string>
 </resources>
